--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@ body{
 	margin:0;
 
 }
-
+body h1,h2{
+	text-transform: uppercase;
+}
 
 .banner{
 
@@ -37,7 +39,7 @@ margin-top: 0px !important;
 }
 .navbar .nav-item img{
 	width: 25px;
-	height: 25px;
+	height: 15px;
 }
 
 .navbar .nav-item button{
@@ -78,6 +80,12 @@ margin-top: 0px !important;
 	right:0%;
 }
 
+.fa-shopping-cart{
+	color:#000;
+}
+.fa-search{
+	color:#000;
+}
 .customhover:hover{
 -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
@@ -123,6 +131,9 @@ transition: all 0.4s ease-in-out 0s;
 	width: 100%;
 	padding: 0% 0%;
 	margin:0 auto;
+}
+.sectionthree .row{
+	padding:0px;
 }
 .box1{
 	position:relative;
