--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
+html{
+		scroll-behavior: smooth;
+}
+
 body{
 	font-family: 'Niramit', sans-serif;
 	padding:0;
 	margin:0;
 
+
 }
 body h1,h2{
 	text-transform: uppercase;
 }
+
 
 .banner{
 
@@ -304,7 +310,7 @@ transition: all 0.4s ease-in-out 0s;
 	color:#9933ff;
 	font-weight: 600;
 }
-
+.dailylog{}
 .ourservice{
 	margin:100px 0px;
 	min-width: 500px;
@@ -445,9 +451,11 @@ position: relative;
 }
 
 .testomonial h4{
+	padding-top: 35%;
 	text-transform: uppercase;
 }
 .testomonial h2{
+	padding-top: 35%;
 	text-transform: uppercase;
 	padding:10% 0%;
 }
@@ -477,6 +485,7 @@ position: relative;
 	position:relative;
 }
 .ourblogpost h2{
+	margin-bottom: 10%;
 	text-align: center;
 }
 .ourblogpost {}
@@ -513,7 +522,7 @@ position: relative;
 .callToAction{
 	width:75%;
 	margin: 0% auto;
-	margin-bottom: -10% !important;
+	margin-bottom: -08% !important;
 	min-height: 250px;
 	background-image: url(../image/cta-bg.png);
 	background-size: cover;
@@ -636,3 +645,712 @@ input {
 .copyright{
 	text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Responsiveness*/
+
+
+@media (max-width: 575.98px) {
+
+.headertextbox h1 {
+    width: 100%;
+    padding-top: 16%;
+    /* padding-bottom: 5%; */
+    font-weight: 600;
+    font-size: 1.7rem;
+}
+
+
+.headertextbox{
+
+}
+.headertextbox button{
+	background: #9933ff;
+	color:#fff;
+	padding:5px 15px;
+	border:none;
+}
+.headertextbox p{
+    width: 70%;
+    padding: 4% 0%;
+}
+.headertextbox h6,img{
+	display:inline;
+	padding:0px 5px;
+}
+
+.bigstyle{
+	display: none;
+	/* position:absolute; */
+	/* top:60%; */
+	/* right:0%; */
+}
+
+.wearefantasy{
+	padding:100px 0px;
+	position: relative;
+}
+.wearefantasy h2{
+    font-size: 1.2rem;
+    text-align: center;
+    width: 100%;
+}
+.wearefantasy button{
+	margin: 25px auto;
+	/* margin-left: -6%; */
+	/* position: absolute; */
+	/* top:45%; */
+	/* left:45%; */
+	/* font-size:1rem; */
+	/* background:transparent; */
+	/* border:0.50px  solid #cc99ff; */
+	/* padding:5px 15px; */
+	/* margin: 0 auto; */
+}
+
+
+.sectionthree{
+	margin:80px 0px;
+	margin:0 auto;
+}
+.sectionthree p{
+	display:inline;
+}
+.customfont p{
+	 display: none;
+	 width: 0px;
+	 display: hidden;
+	 /* visibility: hidden; */
+	 /* font-size: 16px; */
+}
+.sectionthree img{
+	width: 100%;
+	padding: 0% 0%;
+	margin:0 auto;
+}
+.sectionthree .row{
+	padding:0px;
+}
+.box1{
+	position:relative;
+}
+.box2{}
+.textbox{
+	width: 66%;
+	position:absolute;
+	top: 30%;
+	left: 23%;
+}
+.textbox h5{
+	font-weight: 600;
+
+}
+.fa-plus-circle{
+	margin:10px 10px;
+	color:#9966ff;
+}
+.aboutus{
+	background-image: url(../image/background_about.png);
+	/* height: 800px; */
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	background-position: center;
+	/*		position:relative;*/
+}
+
+
+.aboutus{
+
+}
+.aboutus button{
+	width: 50% !important;
+	margin: 0px 25%;
+	background: #9933ff;
+	color:#fff;
+	padding: 5px 5px;
+	border:none;
+}
+.aboutus h4{
+	text-align: center;
+	font-size: 1.6rem;
+	width: 100%;
+	padding-top:18%;
+}
+.aboutus h1{
+	text-align: center;
+	/* FONT-VARIANT: JIS04; */
+	width: 85%;
+	margin: 20px auto;
+	/* padding-bottom: 5%; */
+	font-weight: 600;
+	font-size: 1.1rem;
+}
+.aboutus p{
+    width: 68%;
+    padding: 4% 6%;
+}
+.aboutus h6,img{
+	display:inline;
+	padding:0px 5px;
+}
+
+
+.testomonial{
+	position:relative;
+}
+.dailylog{
+    margin: 80px 0px;
+}
+.company_history{
+	display: none;
+	margin:80px 0px;
+	background-image: url(../image/background_company_history.png);
+	height: 450px;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	position:relative;
+	text-align: center;
+}
+.company_history p{
+	font-weight: 700;
+
+}.company_history h5{
+	color:#8f49f9;
+	font-size: 1.0rem;
+	
+}
+.txthighlight{
+	font-size:2.5rem;
+	font-weight: 700;
+}
+.custom_width{
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+	width: 800px;
+  margin: auto;
+}
+
+
+.txtbox1{
+	margin-top:15%;
+	width:65%;
+	height: 50%;
+	padding-top:15%;
+	border-radius: 50%;
+	background-color: #fff;
+	box-shadow: 0px 15px 10px rgba(236, 227, 253, 1);
+}
+.txtbox2{
+	margin-top:75%;
+	width:65%;
+	height: 50%;
+	padding-top:15%;
+	border-radius: 50%;
+	background-color: #fff;
+	box-shadow: 0px 15px 10px rgba(236, 227, 253, 1);
+}
+.txtbox3{
+	margin-top:45%;
+	width:65%;
+	height: 50%;
+	padding-top:15%;
+	border-radius: 50%;
+	background-color: #fff;
+	box-shadow: 0px 15px 10px rgba(236, 227, 253, 1);
+}
+.txtbox4{
+	margin-top:85%;
+	width:65%;
+	height: 50%;
+	padding-top:15%;
+	border-radius: 50%;
+	background-color: #fff;
+	box-shadow: 0px 15px 10px rgba(236, 227, 253, 1);
+}
+
+.shadowbox1{
+	padding-top:15%;
+	
+}
+.shadowbox1 img{
+	width: 80%;
+	position:relative;
+}
+.shadowbox1 h3{
+	font-size: 16px;
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+}
+
+.shadowbox2{
+	padding-top:8%;
+}
+.shadowbox2 img{
+	width: 80%;
+}
+
+.shadowbox3{
+	padding-top:18%;
+}
+.shadowbox3 img{
+	width: 80%;
+}
+.shadowbox4{
+	padding-top:12%;
+}
+.shadowbox4 img{
+	width: 80%;
+}
+
+.highlighter{
+	color:#9933ff;
+	font-weight: 600;
+}
+
+.ourservice{
+	margin:100px 0px;
+	min-width: 500px;
+}
+.ourservice h4{
+	/* margin-right: 17px; */
+	margin: 20px 0px;
+	text-align: center;
+	font-size: 1.5rem;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+.ourservice h2{
+	margin-top:55px;
+	/*font-weight: 700;*/
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.ourservice p{
+	
+width: 99%;
+	
+text-align: center;
+	
+padding-left: 5px;
+	
+padding-right: 5px;
+}
+.ourservice button{
+	
+margin: 50px 212px;
+	
+/* margin-top: 55px; */
+	
+/* color:#9933ff; */
+	
+/* font-size:1rem; */
+	
+/* background:transparent; */
+	
+/* border:0.50px  solid #cc99ff; */
+	
+/* padding:5px 15px; */
+}
+.image-width{
+	text-align: center;
+	position: relative;
+	/* border:1px solid blue; */
+}
+.text_ourservice{
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left: 15%;
+    width: 70%;
+    /*border:1px solid red; */
+}
+
+
+.image-width1{
+position: relative;
+
+}
+
+.text_ourservice1{
+	position: absolute;
+	bottom: 11%;
+	left: 15%;
+	width: 70%;
+	/* border:1px solid red; */
+}
+
+
+.image-width2{position: relative;left: 8%;}
+
+.text_ourservice3{
+	position: absolute;
+	top: 20%;
+	left: 15%;
+	width: 70%;
+	/*border:1px solid blue; */
+}
+
+.image-width3{
+position: relative;
+
+}
+
+.text_ourservice4{
+	position: absolute;
+	bottom: 17%;
+	left: 17%;
+	width: 70%;
+	/*border:1px solid red; */
+}
+.image-width4{
+    margin: 0 auto;
+    margin: 10%;
+    width: 100%;
+}
+.image-width2 img{}
+.image-width2 h4{}
+.image-width2 p{}
+
+.ourteam{
+	margin:80px 0px;
+	text-align: center;
+
+}
+.ourteam h4 {
+	margin-top:25px;
+}
+.ourteam p {
+	color:#9933ff;
+}
+
+.agencytask{
+	margin:100px 0px;
+	position:relative;
+}
+.flowerdesign{
+	position:absolute;
+	left: 50%;
+	transform: translate(-50%, 35%);
+	top: 50;
+}
+.agencytask h2{
+	padding:15px 10px;
+	width: 100%;
+	text-align: center;
+}
+.agencytask h4{
+	text-align: center;
+	color:#9933ff;
+	font-size: 16px;
+}
+.agencytask p{
+	text-decoration: underline;
+	text-align: center;
+}
+.txt-highlight{
+	font-size:32px;
+	font-weight: 700;
+}
+
+.borderbox{
+	border:0.5 #fbf8ff;
+	width: 100%;
+	background: #ffffff;
+	/* padding:15px 10px; */
+}
+
+.portfolio{
+	/*background-image: url(../image/filering-bg.png);
+	background-position:center;
+	background-size:50%;
+	bottom: 10%;
+	background-repeat:no-repeat;*/
+}
+
+.testomonial{
+	margin:80px 0px;
+	background-image: url(../image/testomonial-bg.png);
+	background-position:center;
+	background-size:50%;
+	background-repeat:no-repeat;*/
+
+}
+
+.testomonial h4{
+	padding-top: 35%;
+	text-align: center;
+	text-transform: uppercase;
+}
+.testomonial h2{
+	text-align: center;
+	padding-top: 35%;
+	text-transform: uppercase;
+	padding:10% 0%;
+}
+
+.testomonial_width{
+	text-align: center;
+	width: 77%;
+	margin:15% auto;
+	opacity:1;
+	/*border:1px solid red;*/
+	box-shadow: 0px 0px 100px 10px #f1f1f1;
+}
+
+.testomonial_width img {
+	display:inline;
+
+}
+
+.testomonial_width h6{
+	text-align: center;
+	padding-top: 10px;
+}
+
+.ourblogpost{
+	margin-top:10%;
+	margin-bottom: 20%;
+	position:relative;
+}
+.ourblogpost h2{
+	margin-bottom: 10%;
+	text-align: center;
+}
+.ourblogpost {}
+.ourblogpost .card{
+	position:relative;
+}
+
+.ourblogpost .date{
+	
+	padding:5px;
+	border-radius: 5px;
+	text-align: center;
+	position:absolute;
+	top:2%;
+	left:5%;
+	background: #fff;
+	color:#9933ff;
+}
+.ourblogpost .date h5{
+	font-size:0.8rem;
+}
+.card-text-bold{
+	color:#9933ff;
+	text-transform:uppercase;
+	font-weight: 700;
+	font-size:0.8rem;
+}
+
+.card:hover{
+	/*margin-bottom: 25px;*/
+	border-bottom: 2px solid #9933ff;
+}
+
+.callToAction{
+	display: none;
+	width:75%;
+	margin: 0% auto;
+	margin-bottom: -08% !important;
+	min-height: 250px;
+	background-image: url(../image/cta-bg.png);
+	background-size: cover;
+	background-position: center;
+	/*border:1px solid red;*/
+	position:absolute;
+	bottom: -71%;
+	left:50%;
+	transform: translate(-50%,0%);
+}
+
+.callToAction h3{
+	/* padding: 4% 10%; */
+	padding-top: 10%;
+	padding-left: 15%;
+}
+
+.callToAction p{
+	padding: 2% 15%;
+}
+
+.callToAction button{
+	margin: 40% 20%;	
+	width: 45%;	
+	background: #9933ff;	
+	color: #fff;	
+	border: none;
+	border-radius: 5px;
+	padding: 5px 10px;
+	text-align: center;
+	text-transform: uppercase;
+}
+.footer{
+	background-image: url(../image/footer-bg.png);
+	background-size:cover;
+	background-repeat:no-repeat;
+
+}
+.footerline{
+	text-align: center;
+	/* padding-top:20%; */
+	/* padding-bottom: 5%; */
+}
+
+.footerline h5{
+	margin:10% 0%;
+	font-size: 1.0rem;
+}
+
+.footerline h4{
+	margin:10% 0%;
+	font-size: 1.1rem;
+	font-weight: 700;
+	text-transform: uppercase;
+
+}
+.fa-facebook,.fa-instagram,.fa-twitter{
+	color:#9933ff;
+	font-size: 2.0rem;
+	padding:3% 3%;
+}
+.fa-facebook:hover{
+	color:#fff;
+	background-color: #9933ff;
+	border-radius: 15px;
+}
+.fa-instagram:hover{
+	color:#fff;
+	background-color: #9933ff;
+	border-radius: 15px;
+}
+.fa-twitter:hover{
+	color:#fff;
+	background-color: #9933ff;
+	border-radius: 15px;
+}
+.fa-arrow-up{
+	color:#9933ff;
+	margin: 0 auto;
+	padding: 0% 50%;
+}
+.customfontsize p{
+	font-size:0.8rem;
+}
+.customfontsize form{
+	width:50%;
+}
+.customfontsize a{
+	display:inline;
+	margin: 42px auto;
+}
+input {
+    overflow: visible;
+    font-size: 9px;
+    display:inline;
+}
+.space{
+	padding-left:4%;
+}
+.btngroup {
+	margin: 2% 35%;
+	/* transform: translate(0%,0%); */
+}
+.btngroup button{
+	margin: 5px 10px;
+	padding: 5px 30px;
+	background-color: #fff;
+	border:0.5px solid #9933ff;
+}
+.btngroup button:hover{
+	background-color: #9933ff;
+	color:#fff;
+}
+
+.fa-apple{
+	padding:0% 1%;
+}
+.fa-google-play{
+	padding:0% 1%;
+}
+.footer{
+    /* display: none; */
+}
+.copyright{
+	text-align: center;
+}
+#myBtnContainer{
+    text-align: center;
+    padding: 5% 20%;
+}
+.company{
+	width: 100%;
+	display:block;
+}
+.corelink{
+	display:none;
+}
+.information{
+	display:none;
+}
+.hidden{
+	display:none;
+}
+.about_company{
+	display:none;
+}
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) { 
+
+
+
+
+
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) {
+
+
+
+
+
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {
+
+
+
+ }
+
