--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,17 @@ html{
 		scroll-behavior: smooth;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body{
 	font-family: 'Niramit', sans-serif;
-	padding:0;
-	margin:0;
-
 
 }
 body h1,h2{
