--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,9 @@ transition: all 0.4s ease-in-out 0s;
 	color:#9933ff;
 	font-weight: 600;
 }
-.dailylog{}
+.dailylog{
+	text-align: center;
+}
 .ourservice{
 	margin:100px 0px;
 	min-width: 500px;
@@ -833,6 +835,8 @@ input {
 }
 .dailylog{
     margin: 80px 0px;
+    text-align: center;
+    font-size: 1.2rem;
 }
 .company_history{
 	display: none;
@@ -1158,6 +1162,7 @@ position: relative;
 }
 .ourblogpost {}
 .ourblogpost .card{
+	margin-bottom: 120px;
 	position:relative;
 }
 
@@ -1307,10 +1312,10 @@ input {
 }
 
 .fa-apple{
-	padding:0% 1%;
+	padding:0% 0%;
 }
 .fa-google-play{
-	padding:0% 1%;
+	padding:0% 0%;
 }
 .footer{
     /* display: none; */
